# cargo-stitch

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
example/: Cargo.toml  README.md
example/app/: Cargo.toml
example/app/src/: main.rs
example/config/src/: lib.rs  parser.rs
example/stitches/config/: 001-add-error-handling.patch  001-add-load-or-default.patch  003-add-display-and-iter.patch  003-hashmap-with-capacity.yaml
example/stitches/default/config/: 002-unwrap-to-expect.yaml
src/: error.rs  fs.rs  lib.rs  main.rs  stitch.rs  subcommand.rs  wrapper.rs
tests/: e2e.rs  integration.rs
